syntax = "proto3";
package pancakeswap.v1;

message Events {
  repeated Transaction transactions = 1;
}

message Transaction {
  bytes signature = 1;
  bytes fee_payer = 2;
  repeated bytes signers = 3;
  uint64 fee = 4;
  uint64 compute_units_consumed = 5;
  repeated Instruction instructions = 6;
  repeated Log logs = 7;
}

message Instruction {
  bytes program_id = 1;
  uint32 stack_height = 2;
  oneof instruction {
    SwapInstruction swap = 3;
  }
}

message SwapAccounts {
  bytes payer = 1;
  bytes amm_config = 2;
  bytes pool_state = 3;
  bytes input_token_account = 4;
  bytes output_token_account = 5;
  bytes input_vault = 6;
  bytes output_vault = 7;
  bytes observation_state = 8;
  bytes token_program = 9;
  bytes tick_array = 10;
}

message SwapInstruction {
  SwapAccounts accounts = 1;
  uint64 amount = 2;
  uint64 other_amount_threshold = 3;
  string sqrt_price_limit_x64 = 4;
  bool is_base_input = 5;
}

message Log {
  bytes program_id = 1;
  uint32 invoke_depth = 2;
  oneof log {
    SwapEvent swap = 3;
  }
}

message SwapEvent {
  bytes pool_state = 1;
  bytes sender = 2;
  bytes token_account_0 = 3;
  bytes token_account_1 = 4;
  uint64 amount_0 = 5;
  uint64 transfer_fee_0 = 6;
  uint64 amount_1 = 7;
  uint64 transfer_fee_1 = 8;
  bool zero_for_one = 9;
  string sqrt_price_x64 = 10;
  string liquidity = 11;
  int32 tick = 12;
}
