syntax = "proto3";

package raydium.clmm.v1;

message Events {
  repeated Transaction transactions = 1;
}

message Transaction {
  bytes signature = 1;
  bytes fee_payer = 2;
  repeated bytes signers = 3;
  uint64 fee = 4;
  uint64 compute_units_consumed = 5;
  repeated Log logs = 6;
}

message Log {
  bytes program_id = 1;
  uint32 invoke_depth = 2;
  oneof log {
    SwapLog swap = 3;
  }
}

message SwapLog {
  bytes pool_state = 1;
  bytes sender = 2;
  bytes token_account_0 = 3;
  bytes token_account_1 = 4;
  uint64 amount_0 = 5;
  uint64 transfer_fee_0 = 6;
  uint64 amount_1 = 7;
  uint64 transfer_fee_1 = 8;
  bool zero_for_one = 9;
  string sqrt_price_x64 = 10;
  string liquidity = 11;
  sint32 tick = 12;
}
